trader now page alignment fixed

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -157,14 +157,19 @@ img.img-resonsive {
 /* start  media query*/
  @media screen and (min-width: 320px) and (max-width: 767px){
 .bottom_ul li {
-   font-size: 13px;
+   font-size: 14px;
 }
 .copyright p {
-    font-size: 13px;
+    font-size: 14px;
     margin-left: -12px;
 }
 .footer-col{
     margin-top: 25px;
 }
+.bottom_ul li { 
+     line-height:40px; 
+      }
      }
-@media screen and (min-width: 768px) and (max-width: 1023px){}
+@media screen and (min-width: 768px) and (max-width: 1023px){
+
+}
