--- a/src/app/resetpassword/resetpassword.component.css
+++ b/src/app/resetpassword/resetpassword.component.css
@@ -156,6 +156,9 @@ h4.text-center {
     margin-left:0px;
     margin-bottom: 87px;
 }
+h4.text-center{
+    margin: 0px;
+}
 .login-text {
     
     margin-right: 0px;
