--- a/src/app/wallet/wallet.component.css
+++ b/src/app/wallet/wallet.component.css
@@ -101,6 +101,9 @@ img.wallet-image {
     top: 66px;
     left: 30%;
 }
+p.wallet.text-center {
+   font-size: 15px;
+}
 }
 
  @media screen and (min-width: 768px) and (max-width: 1023px){
